Source/WTF/wtf/StdLibExtras.h
@@ -27,6 +27,7 @@
 #ifndef WTF_StdLibExtras_h
 #define WTF_StdLibExtras_h
 
+#include <algorithm>
 #include <cstring>
 #include <memory>
 #include <type_traits>
@@ -446,11 +447,28 @@ IteratorTypeDst mergeDeduplicatedSorted(IteratorTypeLeft leftBegin, IteratorType
 }
 
 // libstdc++5 does not have constexpr std::tie. Since we cannot redefine std::tie with constexpr, we define WTF::tie instead.
-// https://gcc.gnu.org/bugzilla/show_bug.cgi?id=65978
+// This workaround can be removed after 2019-04 and all users of WTF::tie can be converted to std::tie
+// For more info see: https://bugs.webkit.org/show_bug.cgi?id=180692 and https://gcc.gnu.org/bugzilla/show_bug.cgi?id=65978
 template <class ...Args>
 inline constexpr std::tuple<Args&...> tie(Args&... values) noexcept
 {
     return std::tuple<Args&...>(values...);
+}
+
+// libstdc++4 does not have constexpr std::min or std::max.
+// As a workaround this defines WTF::min and WTF::max with constexpr, to be used when a constexpr result is expected.
+// This workaround can be removed after 2018-06 and all users of WTF::min and WTF::max can be converted to std::min and std::max.
+// For more info see: https://bugs.webkit.org/show_bug.cgi?id=181160
+template <class T>
+inline constexpr const T& min(const T& a, const T& b)
+{
+    return std::min(a, b);
+}
+
+template <class T>
+inline constexpr const T& max(const T& a, const T& b)
+{
+    return std::max(a, b);
 }
 
 } // namespace WTF
