Source/WebCore/platform/graphics/FontSelectionAlgorithm.h
@@ -102,7 +102,7 @@ constexpr FontSelectionValue FontSelectionValue::minimumValue()
 
 constexpr FontSelectionValue FontSelectionValue::clampFloat(float value)
 {
-    return FontSelectionValue { std::max<float>(minimumValue(), std::min<float>(value, maximumValue())) };
+    return FontSelectionValue { WTF::max<float>(minimumValue(), WTF::min<float>(value, maximumValue())) };
 }
 
 constexpr FontSelectionValue::FontSelectionValue(int rawValue, RawTag)
